[package]
name = "geometrydash"
version = "0.1.0"
edition = "2021"
authors = ["zeozeozeo"]
description = "Geometry Dash modding library"
readme = "README.md"
repository = "https://github.com/zeozeozeo/geometrydash"
homepage = "https://github.com/zeozeozeo/geometrydash"
license = "BSL-1.0"
keywords = ["geometry dash", "modding", "hook", "mod"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minhook = "0.3.0"
winapi = { version = "0.3.9", features = ["libloaderapi", "memoryapi"] }
fmod = { path = "fmod", optional = true, version = "*" }

[features]
gd_fmod = ["fmod"]
