[package]
name = "geometrydash"
version = "0.1.0"
edition = "2021"
authors = ["zeozeozeo"]
description = "Geometry Dash modding library"
readme = "README.md"
repository = "https://github.com/zeozeozeo/geometrydash"
homepage = "https://github.com/zeozeozeo/geometrydash"
license = "BSL-1.0"
keywords = ["geometrydash", "modding", "hook", "mod"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minhook = "0.3.0"
winapi = { version = "0.3.9", features = ["libloaderapi", "memoryapi"] }

[build-dependencies]
bindgen = "0.68.1"

[features]
fmod = []
