[package]
name = "geometrydash"
version = "0.2.1"
edition = "2021"
authors = ["zeozeozeo"]
description = "Geometry Dash modding library"
readme = "README.md"
repository = "https://github.com/zeozeozeo/geometrydash"
homepage = "https://github.com/zeozeozeo/geometrydash"
license = "BSL-1.0"
keywords = ["geometrydash", "modding", "hook", "mod"]
build = "build.rs"

[build-dependencies]
bindgen = "0.69.1"

[features]
fmod = []

[dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System", "Win32_System_LibraryLoader", "Win32_System_Memory"] }
